--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Andrew@hmtl</title>
 </head>
 <h1>Hello, I'm Andrew</h1>
-<img src ="pax.jpg" width="250px"height="150"px/>
+<img src="px.png" width="150px" height="150px" id="logo" />
 
 <h2><i>I love web Development and am looking Forward in developing web skiilz in the world</i> </h2>
 
