--- a/page 2.html
+++ b/page 2.html
@@ -11,7 +11,7 @@
 <body>
     <table>
 
-        <tr><td bgcolor="yellow"><b>Bechelor computer science Uganda Martyrs University</b></td></tr>
+     <tr><td bgcolor=" yellow">Bechelor computer science Uganda Martyrs University</td></tr>
     </table>
     <table border="2"width=50% height="50%"cellpadding=20>
 <tr><td bgcolor="red"><b>Names</b></td>
@@ -22,7 +22,8 @@
         <td bgcolor="yellow">Kampala</tr>
      <tr><td bgcolor="yellow">Peter</td> 
         <td bgcolor="green">Masaka</tr
-            <tdbgcolor="green">mbale</td>
+       <tr><td bgcolor="green">Otim</td>
+        <td bgcolor="blue">Mbale</td>
 </table>
     
 
