--- a/About.html
+++ b/About.html
@@ -7,25 +7,26 @@
     <title>About US</title>
     <style>
        .txt{ font-size: larger;
-            padding: 300px;
-            margin-right: 50px;
-            float: right;
+            padding: 60px;
+            margin-right: 30px;
             font-size: 30px;
              color: red;}
         .txt2{
-            font-size: 30px;
+            font-size: 20px;
+
+            
         }
 
-            body{ background:url(and4.png.jfif)no-repeat;
+            body{ background:url(holy.png.jpg)no-repeat;
         background-size: cover;}
     </style>
 </head>
 <body>
     <center class="txt"><b><p>ABOUT US</p></b></center>
     <center class="txt2"><b>Combining the best quality materials made of wood, cement,bones and many other materials,news customers are welcomed
-        .constacts us today for more information and other quality products
-        call us on:0759422073/0775679980;</b></center>
-        <img src="and4.png.jfif">
+              .constacts us today for more information and other quality products
+              call us on:0759422073/0775679980;</b></center>
+        <center><img src="and4.png.jfif"></center>
     
 </body>
 </html>
