--- a/Pricing.html
+++ b/Pricing.html
@@ -10,11 +10,11 @@
     font-size: 40px;
     color: greenyellow;
 }
-body{ background:url(price.png.jfif)no-repeat;
+body{ background:url(holy.png.jpg)no-repeat;
         background-size: cover;}
         .div{
             font-size: 30px;
-            color:rgb(24, 32, 6);
+            color:rgb(50, 63, 18);
             position: absolute;
         }
 
@@ -25,9 +25,9 @@ body{ background:url(price.png.jfif)no-repeat;
     <br><br><br>
     <center class="price"><p>PRICES OF OUR PRODUCTS MADE BY ROSARYS AND SCULPTURE PROJECT</p></center>
     <ul class="div">
-    <li>Rosary</li><UG>Shs20,000</UG>
+    <center><b>Rosary<UG><br>Shs20,000</UG></b></center>
     <img src="ros.png.jfif" width="150px" height="150px">
-    <li>Holy Sculpture </li><UG>Shs100,000</UG>
+    <center><b>Holy Sculpture <UG><br>Shs100,000</UG></b></center>
     <img src="fam.png.jfif" width="150px" height="150px">
 
     </ul>
