--- a/home.html
+++ b/home.html
@@ -11,7 +11,7 @@
             color: green;
             font-family: arial;
         }
-        body{ background:url(and.png.jfif)no-repeat;
+        body{ background:url(holy.png.jpg)no-repeat;
         background-size: cover;}
         
     </style>
