--- a/contacts.html
+++ b/contacts.html
@@ -10,10 +10,10 @@
     font-size: 40px;
     color: red;
 }
-body{ background:url(scup.png.jfif)no-repeat;
+body{ background:url(holy.png.jpg)no-repeat;
         background-size: cover;}
 .no{
-    color: blue;
+    color: purple;
     font-size: 20px;
 }
 .call{
