--- a/Data.html
+++ b/Data.html
@@ -37,12 +37,12 @@
 </head>
 <body>
     <div id="outer">
-        <center><h1>Local storage</h1></center>
+        <center><h1>LOCAL STORAGE</h1></center>
         <br>
         My To Do List
         <br><br>
     Task 1 <input id="task1" type="text"><br>
-        <input type="button" value="Save Task" onclick="storetask('task1');">
+        <b><input type="button" value="Save Task" onclick="storetask('task1');"></b>
         <input type="button" value="Get Task" onclick="gettask('task1');">
         <input type="button" value="Clear Task" onclick="cleartask('task1');">
         <br><br><br>
