--- a/Holy Sculptures Project.html
+++ b/Holy Sculptures Project.html
@@ -60,7 +60,7 @@
     <ul type="none">
         <li> <a href="contacts.html">Contacts</a></li>
         <li> <a href="About.html">About US</a></li>
-        <li> <a href="">Service</a></li>
+        <li> <a href="Service.html">Service</a></li>
         <li> <a href="Pricing.html">Pricing</a></li>
         <li class="text"> <a href="home.html">Home</a></li>
     </ul>
