--- a/contacts.html
+++ b/contacts.html
@@ -7,18 +7,18 @@
     <title>Contacts</title>
 <style>
 .contact{
-    font-size: 40px;
-    color: red;
+    font-size: 50px;
+    color: rgb(223, 97, 97);
 }
 body{ background:url(holy.png.jpg)no-repeat;
         background-size: cover;}
 .no{
-    color: purple;
-    font-size: 20px;
+    color: darkred;
+    font-size: 30px;
 }
 .call{
     font-size:30px ;
-    color: black;
+    color: rgb(59, 41, 41);
 }
 
 </style>
@@ -27,7 +27,7 @@ body{ background:url(holy.png.jpg)no-repeat;
 <body>
     <br><br><br><br>
     <center class="contact"><b><p>Contact Information</p></b></center>
-     <center class="no"><p><b>Tel: +256 755 555 555</b></p></center>
+     <center class="no"><p><b>Tel: +256 759 422 055</b></p></center>
      <center class="no"><p><b>Tel: +256 759 422 073</b></p></center>
      <center class="no"><p><b>Tel: +256 775 679 980</b></p></center>
      <br><br><br>
