--- a/Pricing.html
+++ b/Pricing.html
@@ -6,11 +6,39 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pricing</title>
     <style>
+
+.nav{
+          display: flex;
+          padding: % 10%;
+          justify-content: space-between;
+      
+      }
+      .nav ul{
+        display: flex;
+        margin-right: 44%;
+      }
+
+
+       .nav ul li{ 
+        border: 1px solid white;
+        background-color: black;
+        opacity: 0.8;
+        padding: 1% 25%;
+        padding-top: 4%;
+        font-family: arial;
+        border-radius: 10px;
+        margin-right: 15%;
+    list-style: none;
+        }
+
+       .nav ul li a{
+           text-decoration: none; color: white;
+        }
 .price{
     font-size: 40px;
-    color: greenyellow;
+    color: darkred;
 }
-body{ background:url(holy.png.jpg)no-repeat;
+body{ background:url(mother1.webp)no-repeat;
         background-size: cover;}
         .div{
             font-size: 30px;
@@ -22,6 +50,17 @@ body{ background:url(holy.png.jpg)no-repeat;
     </style>
 </head>
 <body>
+    <div class="nav">
+        <ul>
+            <li> <a href="home.html">Home</a></li>
+            <li> <a href="About.html">About Us</a></li>
+            <li> <a href="Service.html">Service</a></li>
+            <li> <a href="Pricing.html">Pricing</a></li>
+            <li> <a href="contacts.html">Contacts</a></li>
+        </ul>
+    
+        </div>
+
     <br><br><br>
     <center class="price"><p>PRICES OF OUR PRODUCTS MADE BY ROSARYS AND SCULPTURE PROJECT</p></center>
     <ul class="div">
