--- a/Service.html
+++ b/Service.html
@@ -6,7 +6,36 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Service</title>
     <style>
-body{ background:url(holy.png.jpg)no-repeat;
+
+.nav{
+          display: flex;
+          padding: % 10%;
+          justify-content: space-between;
+      
+      }
+      .nav ul{
+        display: flex;
+        margin-right: 44%;
+      }
+
+
+       .nav ul li{ 
+        border: 1px solid white;
+        background-color: black;
+        opacity: 0.8;
+        padding: 1% 25%;
+        padding-top: 4%;
+        font-family: arial;
+        border-radius: 10px;
+        margin-right: 10%;
+    list-style: none;
+        }
+
+       .nav ul li a{
+           text-decoration: none; color: white;
+        }
+
+body{ background:url(mother1.webp)no-repeat;
         background-size: cover;}
     .service{
     font-size: 40px;
@@ -20,13 +49,24 @@ body{ background:url(holy.png.jpg)no-repeat;
     </style>
 </head>
 <body>
+
+    <div class="nav">
+        <ul>
+            <li> <a href="home.html">Home</a></li>
+            <li> <a href="About.html">About Us</a></li>
+            <li> <a href="Service.html">Service</a></li>
+            <li> <a href="Pricing.html">Pricing</a></li>
+            <li> <a href="contacts.html">Contacts</a></li>
+        </ul>
+    </div>
     <br><br><br>
 <center class="service"><b><p>SERVICES OFTED AT OUR PROJECT.</p></center></b>
-<li>
-    <center class="text"><b><li><i>Youth are given their Opportunities to learn how to make different Sculptures.</i></li></b></center><br><br>
-    <center class="text"><b><li><i>Youth are trained in different activities such as; Rosory making skills.</i></li></b></center><br><br>
-    <center class="text"><b><li><i>Those with high skills are rewared.</i></li></b></center><br><br>
-</li>
+<ol type="a">
+
+    <p><b><center class="text"><i>Youth are given their Opportunities to learn how to make different Sculptures.</i></p></b></center><br><br>
+   <p><b> <center class="text"><i>Youth are trained in different activities such as; Rosory making skills.</i></p></b></center><br><br>
+    <p><b><center class="text"><i>Those with high skills are rewared.</i></p></b></center><br><br>
+</ol>
     
 </body>
 </html>
