--- a/contacts.html
+++ b/contacts.html
@@ -6,11 +6,39 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contacts</title>
 <style>
+       .nav{
+          display: flex;
+          padding: % 10%;
+          justify-content: space-between;
+      
+      }
+      .nav ul{
+        display: flex;
+        margin-right: 44%;
+      }
+
+
+       .nav ul li{ 
+        border: 1px solid white;
+        background-color: black;
+        opacity: 0.8;
+        padding: 1% 25%;
+        padding-top: 4%;
+        font-family: arial;
+        border-radius: 10px;
+        margin-right: 10%;
+    list-style: none;
+        }
+
+       .nav ul li a{
+           text-decoration: none; color: white;
+        }
+
 .contact{
     font-size: 50px;
     color: rgb(223, 97, 97);
 }
-body{ background:url(holy.png.jpg)no-repeat;
+body{ background:url(mother1.webp)no-repeat;
         background-size: cover;}
 .no{
     color: darkred;
@@ -20,11 +48,25 @@ body{ background:url(holy.png.jpg)no-repeat;
     font-size:30px ;
     color: rgb(59, 41, 41);
 }
+.text{
+    color: brown;
+}
 
 </style>
 
 </head>
 <body>
+    <div class="nav">
+        <ul>
+            <li> <a href="home.html">Home</a></li>
+            <li> <a href="About.html">About Us</a></li>
+            <li> <a href="Service.html">Service</a></li>
+            <li> <a href="Pricing.html">Pricing</a></li>
+            <li> <a href="contacts.html">Contacts</a></li>
+        </ul>
+    
+        </div>
+
     <br><br><br><br>
     <center class="contact"><b><p>Contact Information</p></b></center>
      <center class="no"><p><b>Tel: +256 759 422 055</b></p></center>
@@ -32,6 +74,14 @@ body{ background:url(holy.png.jpg)no-repeat;
      <center class="no"><p><b>Tel: +256 775 679 980</b></p></center>
      <br><br><br>
      <center class="call"><p><b>Please Call Us. God Bless You. </b></p></center>
-  
+     <span class="nu">
+        <i aria-hidden="true" class="fas fa-envelope"></i></span>
+        <ul>
+                     <a href="Email: andrewmutebi98@gmail.com.co.ug " <span class="text"> <b> Email: andrewmutebi98@gmail.com.co.ug</b></span><br>
+                        <a href="#"><img src="facebook.JPG"</a>
+                        <a href="#"><img src="inster.JPG"</a>
+                        <a href="#"><img src="in.JPG"</a>
+                  </ul>      
+     </span>
 </body>
 </html>
