--- a/twritter.html
+++ b/twritter.html
@@ -16,7 +16,7 @@
     
     <style>
         
-        /* .col-md-8{
+         .col-md-8{
             padding: 30px;
             margin-left: 800px;
             font-size: 50px;
@@ -60,7 +60,7 @@
             border: none;
             padding: 8px;
             text-transform: capitalize;
-        } */
+        } 
 
         button[type=google]{
        background-color: white;
